# SIMSI-Transfer

./: .dockerignore  .gitignore  .gitlab-ci.yml  CHANGELOG  Dockerfile  LICENSE  Makefile  MakefileShared  README.md  SIMSI-Transfer.spec  WIP.md  build.py  build_gui.bat  conda_environment.yml  create_gui_zip.py  gui.py  pyproject.toml  update_maracluster.sh  upx.bat
.github/workflows/: gui_build.yml  publish_release.yml  push_for_build.yml
admin/: get_download_stats.sh  release_checklist.txt
docs/source/: api.rst  conf.py  index.rst  usage.rst
gui_tools/: build_gui.bat  create_gui_zip.py
resources/: parameters.py
simsi_transfer/: IO_functions.py  __init__.py  __main__.py  command_line_interface.py  evidence.py  main.py  maracluster.py  maxquant.py  merging_functions.py  msfragger.py  processing_functions.py  simsi_output.py  thermo_raw.py  tmt_extractor.py  tmt_processing.py  transfer.py  version.py
simsi_transfer/utils/: multiprocessing_pool.py  subprocess_with_logger.py  utils.py
tests/: test_merging_functions.py  test_processing_functions.py
tests/unit_tests/: test_IO_functions.py  test_evidence.py  test_maracluster.py  test_maxquant.py  test_merging_functions.py  test_processing_functions.py  test_thermo_raw.py  test_transfer.py  test_utils.py
