[tool.poetry]
name = "simsi_transfer"
version = "0.2.0"
description = "Software-assisted reduction of missing values in phosphoproteomics and proteomics isobaric labeling data using MS2 spectrum clustering"
authors = ["Firas Hamood <firas.hamood@tum.de>", "Matthew The <matthew.the@tum.de>"]
license= "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/kusterlab/SIMSI-Transfer"
repository = "https://github.com/kusterlab/SIMSI-Transfer"
keywords = ["mass spectrometry", "missing values", "clustering", "proteomics", "quantification"]
include = [
  "LICENSE",
  "THERMO_LICENSE"
]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.18.1"
pandas = "^1.3.0"
pyteomics = "^4.5.3"
lxml = "^4.8.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-cov = "^2.12.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
