[tool.poetry]
name = "simsi_transfer"
version = "0.7.0"
description = "Software-assisted reduction of missing values in phosphoproteomics and proteomics isobaric labeling data using MS2 spectrum clustering"
authors = ["Firas Hamood <firas.hamood@tum.de>", "Matthew The <matthew.the@tum.de>"]
license= "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/kusterlab/SIMSI-Transfer"
repository = "https://github.com/kusterlab/SIMSI-Transfer"
keywords = ["mass spectrometry", "missing values", "clustering", "proteomics", "quantification"]
include = [
  "LICENSE",
  "THERMO_LICENSE"
]
#build = "build.py" # this creates platform and python version specific packages when running poetry build. Not necessary here since we do not have compiled code, e.g. cython

[tool.poetry.dependencies]
python = "^3.8"
numpy = ">=1.18.1"
pandas = ">=1.4.0"
pyteomics = "^4.5.3"
lxml = "^4.8.0"
job-pool = ">=0.3.0"
pyqt5 = {version = "5.15.7", optional = true}
pyqt5-qt5 = {version = "5.15.2", optional = true}
pyarrow = ">=16.0.0"
tqdm = "^4.66.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-cov = "^2.12.1"

[tool.poetry.extras]
gui = ["pyqt5", "pyqt5-qt5"]

[build-system]
requires = ["poetry-core>=1.5.1"]
build-backend = "poetry.core.masonry.api"
